--- a/task.html
+++ b/task.html
@@ -11,7 +11,7 @@
     <iframe src="https://en.wikipedia.org/wiki/Shreya_Ghoshal" frameborder="0"></iframe>
     <iframe src="./song.mp3" frameborder="0">Audio</iframe>
     <iframe src="./video.mp4" frameborder="0">Video</iframe>
-    <img src="../day1/image.jpg" alt="girl image" width="400">
+    <img src="./image.jpg" alt="girl image" width="400">
     <h1>Listen Nuvvu ni navvu chalamma song</h1>
     <audio controls muted loop autoplay>
         <source src="./song.mp3">
